style : fixed H3 alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
 body {
   background-image: linear-gradient(to right, #6f84df, #153bd1);
   backdrop-filter: blur(10px);
-  text-align: center;
   margin: 0;
 }
 
@@ -14,6 +13,7 @@ h1 {
 }
 
 h3 {
+  margin: 1.2rem auto;
   color: gainsboro;
   width: 80%;
 }
